--- a/fe-icesfaces/src/main/resources/log4j.properties
+++ b/fe-icesfaces/src/main/resources/log4j.properties
@@ -6,5 +6,4 @@ log4j.appender.STDOUT.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 log4j.logger.org.apache.commons.beanutils=INFO
 log4j.logger.org.apache.commons.digester=INFO
-log4j.logger.org.ajax4jsf=INFO
-log4j.logger.net.sf.jasperreports=INFO
+log4j.logger.com.icesoft.faces.webapp=INFO
