--- a/fe-richfaces/src/main/resources/log4j.properties
+++ b/fe-richfaces/src/main/resources/log4j.properties
@@ -1,8 +1,10 @@
 log4j.rootLogger=DEBUG, STDOUT
+
 log4j.logger.deng=INFO
+
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-4r [%t] %-p %-5l - %m%n
 
 log4j.logger.org.apache.commons.beanutils=INFO
 log4j.logger.org.apache.commons.digester=INFO
