Agregando algunos test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ cache:
   directories:
   - $HOME/.m2
 
+addons:
+    apt:
+      update: true
+
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
@@ -20,13 +24,13 @@ after_script:
   - ls -lha
 
   - export JACOCO_SOURCE_PATH=be-core/src/main/java
-  - ./cc-test-reporter format-coverage target/site/jacoco/jacoco.xml --debug --input-type jacoco
+  - ./cc-test-reporter format-coverage be-core/target/site/jacoco/jacoco.xml --debug --input-type jacoco
   - ./cc-test-reporter upload-coverage --debug
 
   - export JACOCO_SOURCE_PATH=fe-icesfaces/src/main/java
-  - ./cc-test-reporter format-coverage target/site/jacoco/jacoco.xml --debug --input-type jacoco
+  - ./cc-test-reporter format-coverage fe-icesfaces/target/site/jacoco/jacoco.xml --debug --input-type jacoco
   - ./cc-test-reporter upload-coverage --debug
 
   - export JACOCO_SOURCE_PATH=fe-richfaces/src/main/java
-  - ./cc-test-reporter format-coverage target/site/jacoco/jacoco.xml --debug --input-type jacoco
+  - ./cc-test-reporter format-coverage fe-richfaces/target/site/jacoco/jacoco.xml --debug --input-type jacoco
   - ./cc-test-reporter upload-coverage --debug
