--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <commons-codec.version>1.10</commons-codec.version>
     </properties>
 
     <modules>
@@ -32,6 +34,16 @@
         <module>fe-richfaces</module>
         <module>fe-icesfaces</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
