--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 jdk:
-  oraclejdk8
+  - oraclejdk8
 
 addons:
   apt:
@@ -9,7 +9,7 @@ addons:
 
 cache:
   directories:
-    $HOME/.m2
+    - $HOME/.m2
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
@@ -17,7 +17,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
-  mvn clean verify
+  - mvn clean verify
 
 after_script:
   - export SUITE=be-core
