--- a/be-core/src/main/resources/org/sanmarcux/bd/jdbc.properties
+++ b/be-core/src/main/resources/org/sanmarcux/bd/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/address_book?useSSL=false
-jdbc.username = root
-jdbc.password = rootroot
+jdbc.username = travis
+jdbc.password =
