--- a/fe-richfaces/pom.xml
+++ b/fe-richfaces/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>glassX</artifactId>
             <version>3.3.3.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
