--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Address Book</name>
+    <name>Address Book Webapp</name>
     <description>Demo project with JSF Framework</description>
 
     <scm>
