--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,4 +28,4 @@ fe-richfaces.sonar.projectName=Frontend with RichFaces
 
 # Configuration for fe-richfaces Module
 # Source File Exclusions
-fe-richfaces.sonar.exclusions=src/main/webapp/**/*.jsp,src/main/webapp/**/*.css
+fe-richfaces.sonar.exclusions=src/main/webapp/**/*.html,src/main/webapp/**/*.jsp,src/main/webapp/**/*.css
