--- a/be-core/src/main/resources/org/sanmarcux/bd/jdbc.properties
+++ b/be-core/src/main/resources/org/sanmarcux/bd/jdbc.properties
@@ -1,3 +1,5 @@
+# Datasource
+
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/address_book?useSSL=false
 jdbc.username = travis
