Upgrading to Java 14

--- a/be-core/src/main/resources/org/sanmarcux/bd/jdbc.properties
+++ b/be-core/src/main/resources/org/sanmarcux/bd/jdbc.properties
@@ -1,5 +1,5 @@
 # Datasource
 
-jdbc.url = jdbc:mysql://localhost:3306/address_book?useSSL=false
+jdbc.url = jdbc:mysql://localhost:3310/address_book?useSSL=false&noAccessToProcedureBodies=true
 jdbc.username = travis
 jdbc.password =
